<resources  xmlns:tools="http://schemas.android.com/tools">
    <string name="lsq_trim_16_9" translatable="false">16:9</string>
    <string name="lsq_trim_3_2" translatable="false">3:2</string>
    <string name="lsq_trim_4_3" translatable="false">4:3</string>
    <string name="lsq_trim_1_1" translatable="false">1:1</string>
    <string name="lsq_trim_3_4" translatable="false">3:4</string>
    <string name="lsq_trim_2_3" translatable="false">2:3</string>
    <string name="lsq_trim_9_16" translatable="false">9:16</string>
    <string name="lsq_eyelash_0" translatable="false">0</string>
    <string name="lsq_eyelash_1" translatable="false">1</string>
    <string name="lsq_eyelash_2" translatable="false">2</string>
    <string name="lsq_eyelash_3" translatable="false">3</string>
    <string name="lsq_eyelash_4" translatable="false">4</string>
    <string name="lsq_eyelash_5" translatable="false">5</string>
    <string name="lsq_eyelash_6" translatable="false">6</string>
    <string name="lsq_eyelash_7" translatable="false">7</string>
    <string name="lsq_eyelash_8" translatable="false">8</string>
    <string name="lsq_eyelash_9" translatable="false">9</string>
    <string name="lsq_eyelash_10" translatable="false">10</string>
    <string name="lsq_eyelash_11" translatable="false">11</string>
    <string name="lsq_eyelash_12" translatable="false">12</string>
    <string name="lsq_eyelash_13" translatable="false">13</string>
    <string name="lsq_eyelash_14" translatable="false">14</string>
    <string name="lsq_eyelash_15" translatable="false">15</string>
    <string name="lsq_eyelash_16" translatable="false">16</string>
    <string name="lsq_eyelash_17" translatable="false">17</string>
    <string name="lsq_eyelash_18" translatable="false">18</string>
    <string name="lsq_eyelash_19" translatable="false">19</string>
    <string name="lsq_eyelash_20" translatable="false">20</string>
    <string name="lsq_eyelash_21" translatable="false">21</string>
    <string name="lsq_eyelash_22" translatable="false">22</string>
    <string name="lsq_eyelash_23" translatable="false">23</string>
    <string name="lsq_eyelash_24" translatable="false">24</string>
    <string name="lsq_eyelash_25" translatable="false">25</string>
    <string name="lsq_eyelash_26" translatable="false">26</string>
    <string name="lsq_eyelash_27" translatable="false">27</string>
    <string name="lsq_eyelash_28" translatable="false">28</string>
    <string name="lsq_blush_a" translatable="false">0</string>
    <string name="lsq_blush_b" translatable="false">1</string>
    <string name="lsq_blush_c" translatable="false">2</string>
    <string name="lsq_blush_d" translatable="false">3</string>
    <string name="lsq_blush_e" translatable="false">4</string>
    <string name="lsq_blush_f" translatable="false">5</string>
    <string name="lsq_blush_g" translatable="false">6</string>
    <string name="lsq_blush_h" translatable="false">7</string>
    <string name="lsq_blush_i" translatable="false">8</string>
    <string name="lsq_blush_j" translatable="false">9</string>
    <string name="lsq_blush_k" translatable="false">10</string>
    <string name="lsq_blush_l" translatable="false">11</string>
    <string name="lsq_blush_m" translatable="false">12</string>
    <string name="lsq_blush_n" translatable="false">13</string>
    <string name="lsq_blush_p" translatable="false">14</string>
    <string name="lsq_blush_x" translatable="false">15</string>
    <string name="lsq_eyeshadow_0" translatable="false">0</string>
    <string name="lsq_eyeshadow_1" translatable="false">1</string>
    <string name="lsq_eyeshadow_2" translatable="false">2</string>
    <string name="lsq_eyeshadow_3" translatable="false">3</string>
    <string name="lsq_eyeshadow_4" translatable="false">4</string>
    <string name="lsq_eyeshadow_5" translatable="false">5</string>
    <string name="lsq_eyeshadow_6" translatable="false">6</string>
    <string name="lsq_eyeshadow_7" translatable="false">7</string>
    <string name="lsq_eyeshadow_8" translatable="false">8</string>
    <string name="lsq_eyeshadow_9" translatable="false">9</string>
    <string name="lsq_eyeshadow_10" translatable="false">10</string>
    <string name="lsq_eyeshadow_11" translatable="false">11</string>
    <string name="lsq_eyeshadow_12" translatable="false">12</string>
    <string name="lsq_eyeshadow_13" translatable="false">13</string>
    <string name="lsq_eyeshadow_14" translatable="false">14</string>
    <string name="lsq_eyeshadow_15" translatable="false">15</string>
    <string name="lsq_eyeshadow_16" translatable="false">16</string>
    <string name="lsq_eyeshadow_17" translatable="false">17</string>
    <string name="lsq_eyeshadow_18" translatable="false">18</string>
    <string name="lsq_eyeshadow_19" translatable="false">19</string>
    <string name="lsq_eyeshadow_20" translatable="false">20</string>
    <string name="lsq_eyeshadow_21" translatable="false">21</string>
    <string name="lsq_eyeshadow_22" translatable="false">22</string>
    <string name="lsq_eyeshadow_23" translatable="false">23</string>
    <string name="lsq_eyeline_0" translatable="false">0</string>
    <string name="lsq_eyeline_1" translatable="false">1</string>
    <string name="lsq_eyeline_2" translatable="false">2</string>
    <string name="lsq_eyeline_3" translatable="false">3</string>
    <string name="lsq_eyeline_4" translatable="false">4</string>
    <string name="lsq_eyeline_5" translatable="false">5</string>
    <string name="lsq_eyeline_6" translatable="false">6</string>
    <string name="lsq_eyeline_7" translatable="false">7</string>
    <string name="lsq_eyeline_8" translatable="false">8</string>
    <string name="lsq_eyeline_9" translatable="false">9</string>
    <string name="lsq_eyeline_10" translatable="false">10</string>
    <string name="lsq_eyeline_11" translatable="false">11</string>
    <string name="lsq_eyeline_12" translatable="false">12</string>
    <string name="lsq_eyeline_13" translatable="false">13</string>
    <string name="lsq_eyeline_14" translatable="false">14</string>
    <string name="lsq_eyeline_15" translatable="false">15</string>
    <string name="lsq_facial_01" translatable="false">01</string>
    <string name="lsq_facial_02" translatable="false">02</string>
    <string name="lsq_facial_03" translatable="false">03</string>
    <string name="lsq_facial_04" translatable="false">04</string>
    <string name="lsq_facial_05" translatable="false">05</string>
    <string name="lsq_facial_06" translatable="false">06</string>
    <string name="lsq_facial_07" translatable="false">07</string>
    <string name="lsq_facial_08" translatable="false">08</string>
    <string name="lsq_facial_09" translatable="false">09</string>
    <string name="lsq_facial_10" translatable="false">10</string>
    <string name="lsq_facial_11" translatable="false">11</string>
    <string name="lsq_facial_12" translatable="false">12</string>
    <string name="lsq_facial_13" translatable="false">13</string>
    <string name="lsq_facial_14" translatable="false">14</string>
    <string name="lsq_camera_speed_rate_slow" translatable="false">0.3x</string>
    <string name="lsq_camera_speed_rate_slow2" translatable="false">0.5x</string>
    <string name="lsq_camera_speed_rate_normal" translatable="false">1x</string>
    <string name="lsq_camera_speed_rate_fast" translatable="false">2x</string>
    <string name="lsq_camera_speed_rate_fast2" translatable="false">3x</string>
    <string name="lsq_filter_set_smoothing" >Smooth</string>
    <string name="lsq_filter_set_whitening">White</string>
    <string name="lsq_filter_set_mixied">Mix</string>
    <string name="lsq_filter_set_vignette">Vignette</string>
    <string name="lsq_filter_set_saturation">Saturation</string>
    <string name="lsq_filter_None">None</string>
    <string name="lsq_filter_Original">Original</string>
    <string name="lsq_filter_Fair01">Fair</string>
    <string name="lsq_filter_Pink01">Pink</string>
    <string name="lsq_filter_Forest01">Forest</string>
    <string name="lsq_filter_Sundown">Sundown</string>
    <string name="lsq_filter_Sakura">Sakura</string>
    <string name="lsq_filter_Paul01">Paul</string>
    <string name="lsq_filter_Lavender">Lavender</string>
    <string name="lsq_filter_Manhattan">Manhattan</string>
    <string name="lsq_filter_Dusk">Dus</string>
    <string name="lsq_filter_TinyTimes">Times</string>
    <string name="lsq_filter_Vivid01">Vivid</string>
    <string name="lsq_filter_Year1950">1950s</string>
    <string name="lsq_filter_Missing01">Missing</string>
    <string name="lsq_filter_Grapefruit01">Grapefruit</string>
    <string name="lsq_filter_BabyPink001">BabyPink</string>
    <string name="lsq_filter_gaosi_01">gaosi</string>
    <string name="lsq_filter_SkinPink010">SkinPink</string>
    <string name="lsq_filter_SkinJelly010">SkinJelly</string>
    <string name="lsq_filter_Fair010">Fair</string>
    <string name="lsq_filter_Pink010">Pink</string>
    <string name="lsq_filter_Forest010">Forest</string>
    <string name="lsq_filter_SkinPink011">SkinPink</string>
    <string name="lsq_filter_SkinJelly011">SkinJelly</string>
    <string name="lsq_filter_Pink011">Pink</string>
    <string name="lsq_filter_Fair011">Fair</string>
    <string name="lsq_filter_Forest011">Forest</string>
    <string name="lsq_filter_nature">Nature</string>
    <string name="lsq_filter_pink">Pink</string>
    <string name="lsq_filter_jelly">Jelly</string>
    <string name="lsq_filter_ruddy">Ruddy</string>
    <string name="lsq_filter_sugar">Sugar</string>
    <string name="lsq_filter_honey">Honey</string>
    <string name="lsq_filter_clear">Clear</string>
    <string name="lsq_filter_timber">Timber</string>
    <string name="lsq_filter_whitening">White</string>
    <string name="lsq_filter_porcelain">Porcelain</string>
    <string name="lsq_filter_Olympus_1">Olympus</string>
    <string name="lsq_filter_Leica_1">Leica</string>
    <string name="lsq_filter_Gold_1">Gold</string>
    <string name="lsq_filter_Cheerful_1">heerful</string>
    <string name="lsq_filter_White_1">White</string>
    <string name="lsq_filter_s1950_1">1950s</string>
    <string name="lsq_filter_Blurred_1">Blurred</string>
    <string name="lsq_start_audiotrecord_hint">Tap or long press to record</string>
    <string name="keep_original_sound">Keep origianl sound</string>
    <string name="lsq_normal">Normal</string>
    <string name="lsq_monster">Monster</string>
    <string name="lsq_uncle">Uncle</string>
    <string name="lsq_girl">Girl</string>
    <string name="lsq_lolita">Lolita</string>
    <string name="dialog_title_discard_edits_tips">Discard your edits？</string>
    <string name="dialog_button_discord">Discard</string>
    <string name="dialog_title_discard_entire_clip">Discard entire clip？</string>
    <string name="dialog_describe_discard_entire_clip">if you go back now, you will lose all the clips added to your video.</string>
    <string name="dialog_button_discord_video">Discard Video</string>
    <string name="dialog_button_start_over">Start Over</string>
    <string name="dialog_button_save_as_draft">Save as Draft</string>
    <string name="dialog_button_cancel">Cancel</string>
    <string name="keep">Keep</string>
    <string name="dialog_title_recover">Continue editing your video?</string>
    <string name="dialog_content_recover">You left before saving your last video. Would you like to continue editing that video,or start a new one?</string>
    <string name="dialog_recover_continue">Continue</string>
    <string name="dialog_recover_new">Start new video</string>
    <string name="camera_permission_title">Allow App Access to your\n Camera And Microphone.</string>
    <string name="camera_permission_content">Access was previously denied.Please\n grant access from Settings</string>
    <string name="camera_permission_cancel">Cancel</string>
    <string name="camera_permission_setting">Go to Settings</string>
</resources>