<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/permission_dialog_bg"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <TextView
            android:id="@+id/record_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:textStyle="bold"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:textSize="15sp"
            android:text="@string/dialog_title_discard_entire_clip"
            android:textColor="@color/lsq_color_black" />

        <TextView
            android:id="@+id/record_title_describe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:gravity="center"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:textSize="15sp"
            android:text="@string/dialog_describe_discard_entire_clip"
            android:textColor="@color/lsq_color_black" />


        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@drawable/select_line_bg" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_discard_video"
                android:layout_width="match_parent"
                android:layout_height="47dp"
                android:background="@null"
                android:textAllCaps="false"
                android:text="@string/dialog_button_discord_video"
                android:textColor="@color/lsq_color_red"
                android:textSize="13sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@drawable/select_line_bg" />

            <Button
                android:id="@+id/btn_start_over"
                android:layout_width="match_parent"
                android:layout_height="47dp"
                android:background="@null"
                android:textAllCaps="false"
                android:text="@string/dialog_button_start_over"
                android:textColor="@color/lsq_light_blue"
                android:textSize="13sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@drawable/select_line_bg" />

            <Button
                android:id="@+id/btn_save_as_draft"
                android:layout_width="match_parent"
                android:layout_height="47dp"
                android:background="@null"
                android:textAllCaps="false"
                android:text="@string/dialog_button_save_as_draft"
                android:textColor="@color/lsq_light_blue"
                android:textSize="13sp"
                android:visibility="visible"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@drawable/select_line_bg" />


            <Button
                android:id="@+id/btn_cancel"
                android:layout_width="match_parent"
                android:layout_height="47dp"
                android:background="@null"
                android:textAllCaps="false"
                android:textStyle="bold"
                android:text="@string/dialog_button_cancel"
                android:textColor="@color/lsq_light_blue"
                android:textSize="13sp" />

<!--            <View-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="1px"-->
<!--                android:background="@color/lsq_dialog_divider" />-->
        </LinearLayout>

    </LinearLayout>

</LinearLayout>