<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dia_log_bg"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <TextView
            android:id="@+id/record_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:textStyle="bold"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:textSize="15sp"
            android:text="@string/dialog_title_recover"
            android:textColor="@color/lsq_color_black" />

        <TextView
            android:id="@+id/record_title_describe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:gravity="center"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:textSize="15sp"
            android:text="@string/dialog_content_recover"
            android:textColor="@color/lsq_color_black" />


        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@drawable/select_line_bg" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <Button
                android:id="@+id/btn_continue"
                android:layout_width="match_parent"
                android:layout_height="47dp"
                android:background="@null"
                android:textAllCaps="false"
                android:textStyle="bold"
                android:text="@string/dialog_recover_continue"
                android:textColor="@color/lsq_light_blue"
                android:textSize="13sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@drawable/select_line_bg" />

            <Button
                android:id="@+id/btn_start_new"
                android:layout_width="match_parent"
                android:layout_height="47dp"
                android:background="@null"
                android:textAllCaps="false"
                android:textStyle="normal"
                android:text="@string/dialog_recover_new"
                android:textColor="@color/lsq_light_blue"
                android:textSize="13sp" />
            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@drawable/select_line_bg" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>