<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/permission_dialog_bg"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <TextView
            android:id="@+id/remind_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:gravity="center"
            android:textStyle="bold"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:textSize="15sp"
            tools:text="@string/dialog_title_discard_edits_tips"
            android:textColor="@color/lsq_color_black" />


        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@drawable/select_line_bg" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_cancel"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_weight="1"
                android:background="@null"
                android:textAllCaps="false"
                android:textStyle="bold"
                android:text="@string/keep"
                android:textColor="@color/lsq_light_blue"
                android:textSize="13sp" />

            <View
                android:layout_width="1px"
                android:layout_height="match_parent"
                android:background="@drawable/select_line_bg" />

            <Button
                android:id="@+id/btn_sure"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_weight="1"
                android:background="@null"
                android:textAllCaps="false"
                android:text="@string/dialog_button_discord"
                android:textColor="@color/lsq_secondary"
                android:textSize="13sp" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>